--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-image-file": "^0.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
