--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "base64-arraybuffer": "^0.2.0",
+    "blob-util": "^2.0.2",
     "framer-motion": "^3.2.2-rc.1",
     "payment-icons": "^1.2.1",
     "react": "^17.0.1",
