--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
     "framer-motion": "^3.2.2-rc.1",
+    "js-cookie": "^2.2.1",
     "payment-icons": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
