--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "axios": "^0.21.1",
     "base64-arraybuffer": "^0.2.0",
     "blob-util": "^2.0.2",
+    "chart.js": "^2.9.4",
     "framer-motion": "^3.2.2-rc.1",
     "js-cookie": "^2.2.1",
     "payment-icons": "^1.2.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-image-file": "^0.3.0",
